# sample-mlops-bestpractices

sagemaker-automated-drift-and-trend-monitoring/: README.md  main.py  pyproject.toml
sagemaker-automated-drift-and-trend-monitoring/cloudformation/: README.md  sagemaker-mlflow-setup.yaml
sagemaker-automated-drift-and-trend-monitoring/notebooks/: 1_training_pipeline.ipynb  6_shap_explainability.ipynb
sagemaker-automated-drift-and-trend-monitoring/notebooks/shap_output/: README.md  feature_importance.csv  shap_force_plot.html  shap_values.csv
sagemaker-automated-drift-and-trend-monitoring/src/config/: config.yaml
sagemaker-automated-drift-and-trend-monitoring/src/setup/: upload_data_to_s3.py
sagemaker-automated-drift-and-trend-monitoring/src/train_pipeline/pipeline_steps/: deploy_endpoint.py  train.py
sagemaker-automated-drift-and-trend-monitoring/src/utils/: shap_utils.py
