[project]
name = "sagemaker-automated-drift-and-trend-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=3.10.0",
    "boto3>=1.36.0",
    "sagemaker>=3.4.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scipy>=1.14.0",
    "awswrangler>=3.9.0",      # AWS Data Wrangler for Athena/S3
    "pyathena>=3.8.0",         # Athena SQL client
    "pyarrow>=17.0.0",         # Parquet support for Iceberg
    "plotly>=5.24.0",          # Interactive visualizations
    "evidently>=0.5.0",        # ML monitoring with data drift detection
    "statsmodels>=0.14.4",     # Required by Evidently for statistical tests
    "shap>=0.43.0",            # SHAP explainability for model interpretability
    "ipykernel>=6.29.0",       # Jupyter kernel for notebook execution
]
